--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,12 @@
     ],
     "type": "project",
     "require": {
-		"php": ">=7.0",
-        "illuminate/database": "~5",
+		"php": "^7.2",
+        "illuminate/database": "~6",
         "fzaninotto/faker": "^1.4"
     },
 	"require-dev": {
-		"phpunit/phpunit": "7.0.*"
+        "phpunit/phpunit": "^8.0"
     },
 	"autoload": {
         "psr-4": {
